Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,6 +209,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[<matplotlib.lines.Line2D at 0x10e3efba8>]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
